--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.3.4",
-    "meteor-node-stubs": "^0.4.1"
+    "@babel/runtime": "^7.4.5",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "meteor-node-stubs": "^0.4.1",
+    "popper.js": "^1.15.0"
   },
   "meteor": {
     "mainModule": {
