--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       "client": "client/main.js",
       "server": "server/main.js"
     },
-    "testModule": "tests/main.js"
+    "testModule": "imports/api/reminders.test.js"
   },
   "devDependencies": {
     "chai": "^4.2.0"
